# Daily-Media-Dashboard

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  fly.toml  pyproject.toml
.github/workflows/: fly-deploy.yml
alembic/: env.py
alembic/versions/: 78d2dd3b32c9_initial_schema.py
config/: ccmd_aor.yaml  feeds.yaml
docker/: entrypoint.sh
docs/: HANDOUT.md  USAGE.md
src/ccmd_dashboard/: __init__.py  ccmd_loader.py  cli.py  config.py  constants.py  db.py  demo.py  demo_data.jsonl  feed_loader.py  models.py
src/ccmd_dashboard/classify/: __init__.py  anthropic_classifier.py  aor_runner.py  aor_tagger.py  best_guess.py  classifier.py  corroborate.py  eval_harness.py  mdm_runner.py  mdm_types.py  scoring.py  stub_classifier.py
src/ccmd_dashboard/ingest/: __init__.py  dedupe.py  fetcher.py  parser.py  pipeline.py
src/ccmd_dashboard/web/: __init__.py  app.py  daily_summary.py  deps.py  nav.py  queries.py  scheduler.py
src/ccmd_dashboard/web/routes/: about.py  analyst.py  articles.py  ccmd.py  export.py  geographic.py  home.py  map.py  mdm.py  notes.py  unassigned.py
src/ccmd_dashboard/web/static/: app.css  app.js
src/ccmd_dashboard/web/templates/: base.html
src/ccmd_dashboard/web/templates/pages/: about.html  article_detail.html  brief.html  ccmd.html  geographic.html  home.html  (+5 more)
tests/: aor_eval.jsonl  test_aor_tagger.py  test_classifier.py  test_dedupe.py  test_demo.py  test_export.py  test_mdm_runner.py  test_parser.py  test_pipeline.py  test_schema_smoke.py  test_scoring.py  test_web_smoke.py
tests/fixtures/: sample_feed.xml
(+3 files in other folders)
